[package]
name = "flight_radar_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
derive = "1.0.0"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
