[package]
name = "flight_radar_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
derive = "1.0.0"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.42"
